[Portal.Theme] CSS update adding dropshadow ; Fixing menu alignment on browsers

--- a/portal.country_themes/trunk/ke/css/reset.css
+++ b/portal.country_themes/trunk/ke/css/reset.css
@@ -1863,7 +1863,7 @@ div#region-content {
     margin: 0 auto 0 auto;    
 }
 .template-portal-eXist div#region-content {
-    width: 100%;
+    width: 98%;
 }
 .template-portal-eXist #search-form-global .header-links {
     margin-right:2px;
