--- a/portal.country_themes/trunk/ke/css/skin.css
+++ b/portal.country_themes/trunk/ke/css/skin.css
@@ -1192,23 +1192,20 @@ div.main-column #collage h2 {
 	-moz-box-shadow: rgba(0,0,0,.2) 2px 4px 4px;
 	box-shadow: rgba(0,0,0,.2) 2px 4px 4px;                
 }
-
-.template-portal nav ul li#aux:hover {
-	-webkit-box-shadow: rgba(0,0,0,.2) 0.5px 1px 1px;
-	-moz-box-shadow: rgba(0,0,0,.2) 0.5px 1px 1px;
-	box-shadow: rgba(0,0,0,.2) 0.5px 1px 1px;                
-}
 .template-portal nav ul li:hover a {
 	color: #fff;
 }
 		
 .template-portal nav ul > li > a {
 	display: inline-block !important; 
-	padding: 10px 20px !important;
+	padding: 10px 10px !important;
 	text-decoration: none !important;
 }
 		
-/* HOUSE TOP-NAVS */	
+/* HOUSE TOP-NAVS */
+.template-portal nav ul ul.hse-list {
+    height:15px;
+}
 .template-portal nav ul ul.hse-list,
 .template-portal nav ul ul.parl-list {
     margin:0;
@@ -1229,17 +1226,13 @@ div.main-column #collage h2 {
     color:white !important;   
     background-color:transparent !important;
 	border: transparent !important;
+	font-size:.9em;
+	font-size-adjust:0.49;
 } 
 .template-portal nav ul ul.hse-list li a:hover,
 .template-portal nav ul ul.parl-list li a:hover {
 	color:#ffffff;   
 }        
-
-nav ul#portal-globalnav li.lower-hse a,
-nav ul#portal-globalnav li.upper-hse a,
-nav ul#portal-globalnav li#aux a {
-    height: 15px;
-}
 
 nav ul#portal-globalnav li.lower-hse ul.hse-list li, 
 nav ul#portal-globalnav li.upper-hse ul.hse-list li, 
@@ -1249,11 +1242,9 @@ nav ul#portal-globalnav li.#aux ul.parl-list li {
     
 .template-portal .subnav {  
     height:25px;
-    width:960px;
-	margin-top:-0.55em !important;        
+    width:960px;        
 }
 .template-portal .subnav ul {
-    margin-top:0.5em !important;
     padding:0;
 	display:inline-block;
     background:transparent;
@@ -1269,6 +1260,8 @@ nav ul#portal-globalnav li.#aux ul.parl-list li {
     margin:0;
     color:#dedede;   
 	background-color:transparent;
+	font-size:.9em;
+	font-size-adjust:0.49;	
 } 
 
 .template-portal .site-plone .subnav ul li a {
@@ -2164,6 +2157,9 @@ div.dhx_cal_navline div.active {
 .template-portal-eXist div#region-content {
     background-color:#fff;
     border:1px solid #c1c1c0;
+    -moz-box-shadow: 10px 10px 5px #888;
+    -webkit-box-shadow: 10px 10px 5px #888;
+    box-shadow: 10px 10px 5px #888;    
 }
 .template-portal-eXist div#region-content a {
     color: #000;
